# mewi

./: .gitignore  contributing.md  render.yaml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  research_spike.md  technical_task.md  user_story.md
.github/workflows/: ci-aws-test.yml  ci-eval.yml  ci-integration.yml  ci-units.yml  deploy.yml  eval-on-merge.yml  evals.yml
backend/: .env  .gitignore  CLAUDE.md  Dockerfile  Makefile  Procfile  architecture.md  docker-compose.yml  pyproject.toml
backend/app/: main.py  schemas.py  services.py
backend/app/agent/: action.py  agent.py  creature_agent.py  graph.py  llm_provider.py  memory.py  perception.py  prompts.py  unity_client.py
backend/app/agent/schemas/: action.py  action_schema.py  context.py  context_schema.py  memory.py  memory_schema.py  perception.py  perception_schema.py  state.py  state_schema.py
backend/app/api/: agent.py  deps.py  micrologs.py
backend/app/api/routes/: agent.py  agent_router.py  assets.py  assets_router.py  intake_router.py  micrologs.py  micrologs_router.py
backend/app/api_endpoint/: micrologs.py
backend/app/core/: config.py  exceptions.py  lifespan.py  logger.py  redis.py  supabase.py
backend/app/core/supabase/: __init__.py  client.py  migration.sql  schema_manager.py
backend/app/db/: models.py  redis.py  supabase.py
backend/app/mock_data/: test_sample.json
backend/app/models/: creature.py  microlog.py  user.py
backend/app/repositories/: memory_cache.py  memory_repo.py  microlog_repo.py  microlog_repository.py
backend/app/schemas/: __init__.py  tick.py
backend/app/services/: agent_memory_service.py  agent_service.py  embedding.py  embedding_service.py  memory_service.py  microlog.py  microlog_service.py  redis_service.py  semantic_service.py  services.py  storage.py  storage_service.py
backend/app/tests/db/: test_supadbase_connection.py
backend/app/workers/: agent_tasks.py  agent_worker.py  base.py  microlog_worker.py
backend/docs/: db-connection-fixes.md
backend/evals/: run_eval.py
backend/evals/backend/: run_backend_eval.py
backend/evals/backend/configs/: pr_subset.yaml  smoke.yml
backend/evals/backend/datasets/: pr_subset.json  smoke.json
backend/evals/backend/results/: result.json
backend/evals/backend/rubrics/: judge_rubric.md  rubric_evaluator.py
backend/evals/backend/runner/: judge_a.py  judge_b.py  main_pipeline.py  meta_judge.py  unified_judge.py
backend/evals/data/: data_cloud_long_zh.json  data_cloud_short_zh.json  data_edge_long_zh.json  data_edge_short_zh.json
backend/evals/data/raw/: data_cloud_long_zh.json  data_cloud_short_zh.json  data_edge_long_zh.json  data_edge_short_zh.json  edge_cases_long_gpt4o.json  edge_cases_short_gpt4o.json  general_base_long_gpt4o.json  general_base_short_gpt4o.json
backend/evals/runner/: eval_runner.py  judge.py  openai_judge.py
backend/evals/scripts/: data_cloud_long_zh.json  data_cloud_medium_zh.json  data_cloud_short_zh.json  data_edge_long_zh.json  data_edge_medium_zh.json  data_edge_short_zh.json  generate_dataset.py  preprocess.py  runner.py
backend/scripts/: payload_generator.py  simulate_unity_traffic.py
backend/tests/: conftest.py  mock_unity_client.py
backend/tests/db/: test_agent_memory_service.py  test_redis_service.py
backend/tests/integration/: agent_pipeline_e2e_live.py  conftest.py  payload_generator.py  simulate_unity_traffic.py  test_agent_graph.py  test_agent_pipeline_e2e.py  test_fullstack_e2e.py  test_graph_think.py  test_perception_flow.py  test_redis_real.py  test_supabase_connection.py  test_supabase_core.py
backend/tests/unit/api/: test_api_routes.py  upload.py
backend/tests/unit/core/: test_config.py  test_redis_real.py
backend/tests/unit/models/: test_models.py
backend/tests/unit/repositories/: test_microlog_repo.py
backend/tests/unit/services/: test_agent_service.py  test_embedding_real.py  test_embedding_service.py  test_semantic_service.py  test_storage_service.py
backend/tests/unit/workers/: test_agent_tasks.py  test_agent_worker.py  test_microlog_worker.py
docs/: db-connection-fixes.md
docs/architecture/: evals.md
docs/bug-fix/: db-connection-fixes.md
docs/decisions/: ADR-001-tech-stack.md  ADR-002-hybrid-evals.md  ADR-003-fastapi.md  (+4 more)
infra/: backend.tf  main.tf  provider.tf  variables.tf
(+2 files in other folders)
