[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.135.2",
    "langchain>=1.2.13",
    "langchain-anthropic>=1.4.0",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.12",
    "langgraph>=1.1.3",
    "litellm>=1.82.6",
    "openai>=2.24.0",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "redis>=7.3.0",
    "supabase>=2.28.3",
    "uvicorn>=0.42.0",
]

[dependency-groups]
dev = [
    "pytest-env>=1.6.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "paid: marks tests that call paid external APIs (real LLM)",
    "live: marks tests that require a running Unity AgentBridge at localhost:8080",
]
# no env here — pytest-env handles it below

[tool.pytest_env]
# override = false: only set when the shell has NOT already provided a real value.
# GitHub Actions secrets and local .env (via load_dotenv) always win over these fakes.
SUPABASE_URL             = {value = "http://fake-supabase",       override = false}
SUPABASE_PUBLISHABLE_KEY = {value = "fake-anon-key",              override = false}
SUPABASE_SECRET_KEY      = {value = "fake-service-role-key",      override = false}
OPENAI_API_KEY           = {value = "fake-openai-key",            override = false}
LLM_PROVIDER             = {value = "ollama",                     override = false}
LLM_MODEL                = {value = "gemma3:27b",                 override = false}
LLM_BASE_URL             = {value = "http://localhost:11434",      override = false}
OLLAMA_BASE_URL          = {value = "http://localhost:11434",      override = false}
OLLAMA_MODEL             = {value = "gemma3:27b",                 override = false}
EMBEDDING_MODEL          = {value = "text-embedding-3-small",     override = false}
