[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.135.2",
    "langchain>=1.2.13",
    "langchain-anthropic>=1.4.0",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.12",
    "langgraph>=1.1.3",
    "litellm>=1.82.6",
    "openai>=2.24.0",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "redis>=7.3.0",
    "supabase>=2.28.3",
    "uvicorn>=0.42.0",
]

[dependency-groups]
dev = [
    "pytest-env>=1.6.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "paid: marks tests that call paid external APIs (real LLM)",
    "live: marks tests that require a running Unity AgentBridge at localhost:8080",
]
# no env here — pytest-env handles it below

[tool.pytest_env]
SUPABASE_URL = {value = "http://fake-supabase", skip_if_set = true}
SUPABASE_PUBLISHABLE_KEY = {value = "fake-anon-key", skip_if_set = true}
SUPABASE_SECRET_KEY = {value = "fake-service-role-key", skip_if_set = true}
OPENAI_API_KEY = {value = "fake-openai-key", skip_if_set = true}
